# p2p-agent-mesh

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  QUICKSTART_PILOT.md  README.md  RELEASE_NOTES.md  SECURITY.md  __main__.py  cli.py  connect_direct.py  connect_peers.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
adapters/: __init__.py  autogen_adapter.py  crewai_tool.py  langgraph_channel.py  nip65_discovery.py  test_autogen.py  test_crewai.py
coordination/: __init__.py  consumer_group.py  coordinator.py  dedup.py  raft.py  test_coordination.py
core/: __init__.py  chrono_db.py  reputation.py  test_reputation.py
depin/: __init__.py  device.py  merkle_sync.py  registry.py  test_depin.py  wal.py
docker/: entrypoint.sh  ipfs-config.sh
docs/: ARCHITECTURE.md  OUTREACH_KIT.md  PHASES.md  PILOT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  RELAY_STATUS.md  ROADMAP.md  ROADMAP_EXECUTION.md  SECURITY_MODEL.md
docs/assets/: ARCHITECTURE_DIAGRAM.txt
examples/: 3_agent_langgraph.py  3_agent_signal_mesh.py
phase0/: SPEC.md  SPEC_v0.4.md  __init__.py  dht.py  dht_kademlia.py  handshake.py  identity.py  sig_gate.py  test_identity.py  test_kademlia.py  test_sig_gate.py  test_tcp_transport.py  test_tls_transport.py  test_transport.py  test_wal.py  transport.py  wal.py
phase1/: SPEC.md  __init__.py  test_agent.py  test_langgraph.py
phase2/: __init__.py  mesh_client.py
pilot/: __init__.py  snin_dao_chain.py  test_chain.py
relay/: .env.example  SPEC.md  __init__.py  client.py  http_client.py  http_relay.py  redundancy.py  server.py  test_redundancy.py  test_relay.py  ws_relay.py
sdk/: __init__.py  agent.py  chrono_agent.py
tests/: test_churn.py  test_latency.py
